--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,6 +3,12 @@
     <div mat-card-avatar class="example-header-image"></div>
     <mat-card-title>Shiba Inu</mat-card-title>
     <mat-card-subtitle>Dog Breed</mat-card-subtitle>
+    <h1 class="tw-text-3xl sm:tw-text-green-700 tw-font-bold tw-underline">
+      Hello world!
+    </h1>
+    <h1 class="text-3xl">
+      Hello world!
+    </h1>
   </mat-card-header>
   <img mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu">
   <mat-card-content>
@@ -13,7 +19,8 @@
     </p>
   </mat-card-content>
   <mat-card-actions>
-    <button mat-button>LIKE</button>
-    <button mat-button>SHARE</button>
+    <button mat-raised-button>LIKE</button>
+    <button mat-raised-button (click)="click()">SHARE</button>
   </mat-card-actions>
 </mat-card>
+
