--- a/src/app/components/songs-list/songs-list.component.html
+++ b/src/app/components/songs-list/songs-list.component.html
@@ -1,17 +1,27 @@
 <mat-card class="example-card">
-    <mat-card-header>
-      <h2 class="tw-text-2xl">Písně</h2>
-      <nav class="tw-ml-auto tw-flex">
-        <button (click)="click()"
-        class="tw-bg-sky-500 tw-p-2 tw-rounded tw-text-white tw-flex"><mat-icon>add</mat-icon>píseň</button>
-        <button (click)="click()"
-        class="tw-bg-sky-500 tw-p-2 tw-ml-1 tw-rounded tw-text-white tw-flex"><mat-icon>add</mat-icon>záznam</button>
-      </nav>
-    </mat-card-header>
-    <mat-card-content class="tw-my-2">
-      <ul>
-        <li *ngFor="let song of songs">{{ song.songName }} - {{ getNewestDate(song) }}</li>
-      </ul>
-    </mat-card-content>
-  </mat-card>
-  
+  <mat-card-header>
+    <h2 class="tw-text-2xl">Písně</h2>
+    <nav class="tw-ml-auto tw-flex">
+      <button (click)="click()"
+        class="tw-bg-sky-500 tw-p-2 tw-rounded tw-text-white tw-flex">
+        <mat-icon>add</mat-icon>
+        píseň
+      </button>
+      <button (click)="click()"
+        class="tw-bg-sky-500 tw-p-2 tw-ml-1 tw-rounded tw-text-white tw-flex">
+        <mat-icon>add</mat-icon>
+        záznam
+      </button>
+    </nav>
+  </mat-card-header>
+  <mat-divider class="tw-border-black" style="margin-top: 0.5rem;" ></mat-divider>
+  <mat-card-content class="tw-mt-2">
+    <ul>
+      <li *ngFor="let song of songs">
+        {{ song.songName }}
+        <span class="tw-float-right">{{ getNewestDate(song) }}</span>
+        <mat-divider class="tw-border-black"></mat-divider>
+      </li>
+    </ul>
+  </mat-card-content>
+</mat-card>
