--- a/src/app/components/songs-list/songs-list.component.html
+++ b/src/app/components/songs-list/songs-list.component.html
@@ -1,27 +1,37 @@
 <mat-card class="example-card">
-  <mat-card-header>
-    <h2 class="tw-text-2xl">Písně</h2>
-    <nav class="tw-ml-auto tw-flex">
-      <button (click)="click()"
-        class="tw-bg-sky-500 tw-p-2 tw-rounded tw-text-white tw-flex">
+  <mat-card-header style="justify-content: space-between;">
+    <mat-card-title>
+      Písně
+    </mat-card-title>
+      <button (click)="click()" mat-raised-button color="primary" style="float: right">
         <mat-icon>add</mat-icon>
-        píseň
+        nová
       </button>
-      <button (click)="click()"
-        class="tw-bg-sky-500 tw-p-2 tw-ml-1 tw-rounded tw-text-white tw-flex">
-        <mat-icon>add</mat-icon>
-        záznam
-      </button>
-    </nav>
   </mat-card-header>
-  <mat-divider class="tw-border-black" style="margin-top: 0.5rem;" ></mat-divider>
-  <mat-card-content class="tw-mt-2">
-    <ul>
-      <li *ngFor="let song of songs">
-        {{ song.songName }}
-        <span class="tw-float-right">{{ getNewestDate(song) }}</span>
-        <mat-divider class="tw-border-black"></mat-divider>
-      </li>
-    </ul>
+  <mat-divider style="margin-top: 0.5rem;"></mat-divider>
+  <mat-card-content style="padding-top: 16px;">
+    <section>
+      <mat-form-field class="example-full-width">
+        <input matInput placeholder="Hledat název">
+      </mat-form-field>
+      <mat-form-field class="example-full-width">
+        <input matInput placeholder="Hledat číslo">
+      </mat-form-field>
+    </section>
+    <mat-divider></mat-divider>
+    <mat-divider style="margin-top: 2px;"></mat-divider>
+    <h3 mat-subheader style="display: flex; margin: unset;">
+      <div style="width: 50%;">název</div>
+      <div style="width: 20%;">číslo</div>
+      <div style="width: 30%;">hráno</div>
+    </h3>
+    <mat-divider></mat-divider>
+    <mat-list role="list">
+      <mat-list-item role="listitem" *ngFor="let song of songs" style="height: unset; padding: unset; display: flex;">
+        <div style="width: 50%;">{{ song.songName }}</div>
+        <div style="width: 20%;">{{ isNaN(song.songNumber) ? "-" : song.songNumber }}</div>
+        <div style="width: 30%;">{{ song.newestRecordDate | date:'d.M. YYYY' }}</div>
+      </mat-list-item>
+    </mat-list>
   </mat-card-content>
 </mat-card>
