--- a/src/styles.css
+++ b/src/styles.css
@@ -1,11 +1,13 @@
-@import url("https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap");
+/* @import url("https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap"); */
+@import "~@angular/material/prebuilt-themes/deeppurple-amber.css";
+/* @import '@angular/material/prebuilt-themes/indigo-pink.css'; */
 
-@tailwind base;
+/* @tailwind base;
 @tailwind components;
-@tailwind utilities;
+@tailwind utilities; */
 
-@layer base {
+/* @layer base {
   body {
     font-family: "Inter", sans-serif;
   }
-}
+} */
