--- a/src/app/components/songs-list/songs-list.component.css
+++ b/src/app/components/songs-list/songs-list.component.css
@@ -23,3 +23,7 @@
 ::ng-deep .mat-mdc-list-item-unscoped-content {
   display: flex;
 }
+
+mat-list-item:nth-child(even) {
+  background-color: rgb(192, 192, 192);
+}
