--- a/src/app/components/songs-list/songs-list.component.html
+++ b/src/app/components/songs-list/songs-list.component.html
@@ -12,7 +12,7 @@
   <mat-card-content style="padding-top: 16px;">
     <section>
       <mat-form-field class="example-full-width">
-        <input matInput placeholder="Hledat název">
+        <input matInput placeholder="Hledat název" [(ngModel)]="nameInput" (input)="onNameInputChanged($event)">
       </mat-form-field>
       <mat-form-field class="example-full-width">
         <input matInput placeholder="Hledat číslo">
