--- a/src/app/components/songs-list/create-song/create-song.component.html
+++ b/src/app/components/songs-list/create-song/create-song.component.html
@@ -1,1 +1,20 @@
-<p>create-song works!</p>
+<mat-card style="padding: 0.5rem; min-height: 200px; display: flex;">
+  <mat-card-header style="justify-content: space-between">
+    <mat-card-title>Přidat novou píseň</mat-card-title>
+  </mat-card-header>
+  <mat-card-content style="padding-top: 16px; flex-grow: 1;">
+    <mat-divider></mat-divider>
+    <mat-form-field class="example-full-width">
+      <input matInput placeholder="Název" [(ngModel)]="nameInput">
+    </mat-form-field>
+    <mat-form-field class="example-full-width">
+      <input matInput placeholder="Číslo" [(ngModel)]="numberInput">
+    </mat-form-field>
+  </mat-card-content>
+  <mat-card-footer>
+    <button (click)="onAdd()" mat-raised-button color="accent" style="float: right;">
+      <mat-icon>add</mat-icon>
+      Přidat
+    </button>
+  </mat-card-footer>
+</mat-card>
