--- a/src/app/components/songs-list/songs-list.component.css
+++ b/src/app/components/songs-list/songs-list.component.css
@@ -1,6 +1,6 @@
 .example-card {
     
-    max-width: 100vw;
+    max-width: 100%;
     max-height: 90vh;
     box-shadow: inset 0 -3em 3em rgba(0, 0, 0, 0.1), 0 0 0 2px rgb(190, 190, 190),
     0.3em 0.3em 1em rgba(0, 0, 0, 0.3);
@@ -24,6 +24,6 @@
   display: flex;
 }
 
-mat-list-item:nth-child(even) {
-  background-color: rgb(192, 192, 192);
+mat-list-item {
+  border-top: solid 1px rgb(192, 192, 192);
 }
