--- a/src/app/components/songs-list/songs-list.component.html
+++ b/src/app/components/songs-list/songs-list.component.html
@@ -5,7 +5,7 @@
     </mat-card-title>
       <button (click)="click()" mat-raised-button color="primary" style="float: right">
         <mat-icon>add</mat-icon>
-        nová
+        Nová
       </button>
   </mat-card-header>
   <mat-divider style="margin-top: 0.5rem;"></mat-divider>
@@ -25,11 +25,10 @@
       <div style="width: 20%;">číslo</div>
       <div style="width: 30%;">hráno</div>
     </h3>
-    <mat-divider></mat-divider>
     <mat-list role="list">
       <mat-list-item role="listitem" *ngFor="let song of songs" style="height: unset; padding: unset; display: flex;">
         <div style="width: 50%;">{{ song.songName }}</div>
-        <div style="width: 20%;">{{ isNaN(song.songNumber) ? "-" : song.songNumber }}</div>
+        <div style="width: 20%;">{{ song.songNumber ? "-" : song.songNumber }}</div>
         <div style="width: 30%;">{{ song.newestRecordDate | date:'d.M. YYYY' }}</div>
       </mat-list-item>
     </mat-list>
