--- a/src/app/components/songs-list/songs-list.component.html
+++ b/src/app/components/songs-list/songs-list.component.html
@@ -14,9 +14,9 @@
       <mat-form-field class="example-full-width">
         <input matInput placeholder="Hledat název" [(ngModel)]="nameInput" (input)="onNameInputChanged($event)">
       </mat-form-field>
-      <mat-form-field class="example-full-width">
+      <!-- <mat-form-field class="example-full-width">
         <input matInput placeholder="Hledat číslo">
-      </mat-form-field>
+      </mat-form-field> -->
     </section>
     <mat-divider></mat-divider>
     <mat-divider style="margin-top: 2px;"></mat-divider>
