--- a/src/app/components/songs-list/create-song/create-song.component.html
+++ b/src/app/components/songs-list/create-song/create-song.component.html
@@ -11,10 +11,14 @@
       <input matInput placeholder="Číslo" [(ngModel)]="numberInput">
     </mat-form-field>
   </mat-card-content>
-  <mat-card-footer>
-    <button (click)="onAdd()" mat-raised-button color="accent" style="float: right;">
-      <mat-icon>add</mat-icon>
-      Přidat
+  <mat-card-footer style="padding: 0.5rem;">
+    <button (click)="onClose()" mat-raised-button color="accent" style="float: left;">
+        <mat-icon>arrow_back</mat-icon>
+        Zpět
     </button>
-  </mat-card-footer>
+    <button (click)="onSave()" mat-raised-button color="primary" style="float: right;">
+        <mat-icon>save</mat-icon>
+        Uložit
+    </button>
+</mat-card-footer>
 </mat-card>
