added deleteSong service

--- a/src/app/components/songs-list/create-song/create-song.component.html
+++ b/src/app/components/songs-list/create-song/create-song.component.html
@@ -5,9 +5,11 @@
   <mat-card-content style="padding-top: 16px; flex-grow: 1;">
     <mat-divider></mat-divider>
     <mat-form-field class="example-full-width">
+      <mat-label>Název</mat-label>
       <input matInput placeholder="Název" [(ngModel)]="nameInput">
     </mat-form-field>
     <mat-form-field class="example-full-width">
+      <mat-label>Číslo</mat-label>
       <input matInput placeholder="Číslo" [(ngModel)]="numberInput">
     </mat-form-field>
   </mat-card-content>
