--- a/src/app/components/songs-list/songs-list.component.css
+++ b/src/app/components/songs-list/songs-list.component.css
@@ -1,7 +1,8 @@
 .example-card {
-    
+    display: flex; 
+    flex-direction: column;
     max-width: 100%;
-    max-height: 90vh;
+    height: 96vh;
     box-shadow: inset 0 -3em 3em rgba(0, 0, 0, 0.1), 0 0 0 2px rgb(190, 190, 190),
     0.3em 0.3em 1em rgba(0, 0, 0, 0.3);
   }
