--- a/src/app/components/songs-list/songs-list.component.html
+++ b/src/app/components/songs-list/songs-list.component.html
@@ -11,10 +11,12 @@
         <mat-icon>add</mat-icon>
         Nová píseň
       </button>
-      <button (click)="showHint()" mat-menu-item>
+      <a (click)="showHint()" 
+        href="https://app.tango.us/app/workflow/Jak-p-idat-z-znam-o-hran--p-sn--a57c8ab78e5349d999887b29cc01555b" 
+        target="_blank" mat-menu-item>
         <mat-icon>question_mark</mat-icon>
         Nápověda
-      </button>
+      </a>
       <!-- <button mat-menu-item hidden>
         <mat-icon>music_note</mat-icon>
         <span>Chvály</span>
