--- a/src/app/components/songs-list/songs-list.component.html
+++ b/src/app/components/songs-list/songs-list.component.html
@@ -1,7 +1,7 @@
 <mat-card class="example-card">
   <mat-card-header style="justify-content: space-between;">
     <mat-card-title>
-      Písně
+      Písně 2
     </mat-card-title>
     <button mat-icon-button [matMenuTriggerFor]="menu" aria-label="Example icon-button with a menu">
       <mat-icon>menu</mat-icon>
