--- a/src/app/components/songs-list/songs-list.component.html
+++ b/src/app/components/songs-list/songs-list.component.html
@@ -3,7 +3,8 @@
     <mat-card-title>
       {{ title }}
     </mat-card-title>
-    <button mat-icon-button [matMenuTriggerFor]="menu" aria-label="Example icon-button with a menu">
+    <button mat-icon-button [matMenuTriggerFor]="menu" aria-label="Example icon-button with a menu"
+      matBadge="{{(menuItems.some(itemHasNewFeature)) ? '★' : null}}" matBadgePosition="before">
       <mat-icon>menu</mat-icon>
     </button>
     <mat-menu #menu="matMenu">
@@ -12,7 +13,7 @@
         Nová píseň
       </button>
       <a *ngFor="let item of menuItems" href="{{item.url}}" [attr.target]="(item.openNewTab) ? '_blank' : null" mat-menu-item>
-        <mat-icon>{{ item.icon }}</mat-icon>
+        <mat-icon matBadge="{{(item.newFeature) ? '★' : null}}" matBadgePosition="before">{{ item.icon }}</mat-icon>
         {{ item.title }}
       </a>
     </mat-menu>
