--- a/src/app/modules/songs/hymns/hymns.component.html
+++ b/src/app/modules/songs/hymns/hymns.component.html
@@ -1,1 +1,1 @@
-<songs-list [songs]="hymns" [title]="title" [menuItems]="menuItems" (reloadRequest)="fetchData()"></songs-list>
+<songs-list [songs]="hymns" [title]="title" [menuItems]="menuItems" [mode]="mode" (reloadRequest)="fetchData()"></songs-list>
