--- a/src/app/components/songs-list/songs-list.component.html
+++ b/src/app/components/songs-list/songs-list.component.html
@@ -39,7 +39,7 @@
           {{ song.songName }}
         </div>
         <div style="width: 20%;">{{ (song.playedThisYearTimes) }}x</div>
-        <div style="width: 30%;">{{ (song.newestRecordDate !== undefined) ? (song.newestRecordDate | date:'d.M. YYYY') : "" }}</div>
+        <div style="width: 30%;">{{ (song.newestRecordDate !== undefined) ? (song.newestRecordDate | dateFormat:'D.M. YYYY') : "" }}</div>
       </mat-list-item>
     </mat-list>
   </mat-card-content>
