--- a/src/app/components/songs-list/create-song/create-song.component.html
+++ b/src/app/components/songs-list/create-song/create-song.component.html
@@ -8,10 +8,10 @@
       <mat-label>Název</mat-label>
       <input matInput placeholder="Název" [(ngModel)]="nameInput">
     </mat-form-field>
-    <mat-form-field class="example-full-width">
+    <!-- <mat-form-field class="example-full-width">
       <mat-label>Číslo</mat-label>
       <input matInput placeholder="Číslo" [(ngModel)]="numberInput">
-    </mat-form-field>
+    </mat-form-field> -->
   </mat-card-content>
   <mat-card-footer style="padding: 0.5rem;">
     <button (click)="onClose()" mat-raised-button color="accent" style="float: left;">
