--- a/src/app/modules/songs/hymns/hymns.component.html
+++ b/src/app/modules/songs/hymns/hymns.component.html
@@ -1,1 +1,32 @@
-<songs-list [songs]="hymns" [title]="title" [menuItems]="menuItems" [mode]="mode" (reloadRequest)="fetchData()"></songs-list>
+<mat-card class="example-card">
+  <mat-card-header style="justify-content: space-between">
+    <app-list-header
+      [title]="title"
+      [menuItems]="menuItems"
+      (reloadRequest)="fetchData()"
+    >
+    </app-list-header>
+  </mat-card-header>
+  <mat-divider style="margin-top: 0.5rem"></mat-divider>
+  <mat-card-content
+    style="
+      padding-top: 16px;
+      flex-grow: 1;
+      display: flex;
+      flex-direction: column;
+    "
+  >
+    <mat-checkbox
+      [(ngModel)]="showOnlyRehearsed"
+      (change)="onCheckboxChange($event)"
+      >Pouze nacvičované</mat-checkbox
+    >
+    <songs-list
+      [songs]="hymns"
+      [title]="title"
+      [menuItems]="menuItems"
+      [mode]="mode"
+      (reloadRequest)="fetchData()"
+    ></songs-list>
+  </mat-card-content>
+</mat-card>
