--- a/src/app/components/songs-list/song-detail/song-detail.component.html
+++ b/src/app/components/songs-list/song-detail/song-detail.component.html
@@ -30,7 +30,7 @@
           [matMenuTriggerFor]="menu"
         >
           <mat-icon>add</mat-icon>
-          přidat nacvičujícího
+          přidat
         </button>
         <mat-menu #menu="matMenu">
           <button
